--- a/coupon-server-service/pom.xml
+++ b/coupon-server-service/pom.xml
@@ -13,7 +13,7 @@
   <packaging>pom</packaging>
   <modules>
     <module>coupon-service-common</module>
+    <module>coupon-service-template</module>
   </modules>
-
 
 </project>
