--- a/coupon-server-service/pom.xml
+++ b/coupon-server-service/pom.xml
@@ -14,6 +14,7 @@
   <modules>
     <module>coupon-service-common</module>
     <module>coupon-service-template</module>
+    <module>coupon-service-distribution</module>
   </modules>
 
 </project>
