:beers: 用户领取使用，查看当前可领优惠券Service完成

--- a/coupon-server-service/pom.xml
+++ b/coupon-server-service/pom.xml
@@ -15,6 +15,7 @@
     <module>coupon-service-common</module>
     <module>coupon-service-template</module>
     <module>coupon-service-distribution</module>
+    <module>coupon-service-settlement</module>
   </modules>
 
 </project>
